--- a/week1/week1.ipynb
+++ b/week1/week1.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "480ed1e7-e85f-4982-a321-a43eea38f482",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "array(['Gasoline', 'Diesel'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "061688f9-f9bb-44d7-9a82-fe545fca76fa",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "np.int64(4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "9735e785-5dbd-471a-833b-72d68ab492b7",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "['num_cylinders', 'horsepower', 'acceleration', 'num_doors']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f1670f83-dc07-4a83-adde-3d165d7fd0e9",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,29 +414,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "02292769-e81b-4265-ac86-e29e4f433913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max fuel efficiency: 23.759122836520497\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_fuel_eff = df.loc[df[\"origin\"] == \"Asia\", \"fuel_efficiency_mpg\"].max()\n",
+    "print(f'Max fuel efficiency: {max_fuel_eff}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1a94ea7d-57cc-4d64-a074-45a7a4ca2a6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(23.759122836520497)"
+       "0       159.0\n",
+       "1        97.0\n",
+       "2        78.0\n",
+       "3         NaN\n",
+       "4       140.0\n",
+       "        ...  \n",
+       "9699    164.0\n",
+       "9700    154.0\n",
+       "9701    138.0\n",
+       "9702    177.0\n",
+       "9703    140.0\n",
+       "Name: horsepower, Length: 9704, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df[\"origin\"] == \"Asia\", \"fuel_efficiency_mpg\"].max()"
+    "df.horsepower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "587c26b0-c694-4ade-9d45-c1261a91acc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "horsepower median: 149.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "horsepower_median = df['horsepower'].median()\n",
+    "print(f'horsepower median: {horsepower_median}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b58fcb71-7a88-49d4-b7f7-441ff4bb3d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "horsepower mode: 0    152.0\n",
+      "Name: horsepower, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "horsepower_mode = df['horsepower'].mode()\n",
+    "print(f'horsepower mode: {horsepower_mode}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "04534e8e-aa5b-432b-908e-bc5f75d6d249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['horsepower'].fillna(horsepower_mode[0], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "50228dc3-01f6-4176-9e0d-fb3384419dd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       159.0\n",
+       "1        97.0\n",
+       "2        78.0\n",
+       "3       152.0\n",
+       "4       140.0\n",
+       "        ...  \n",
+       "9699    164.0\n",
+       "9700    154.0\n",
+       "9701    138.0\n",
+       "9702    177.0\n",
+       "9703    140.0\n",
+       "Name: horsepower, Length: 9704, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.horsepower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "02d18c79-4f23-4a80-86cc-c4ff57d85fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "horsepower median: 152.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "horsepower_median = df['horsepower'].median()\n",
+    "print(f'horsepower median: {horsepower_median}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a94ea7d-57cc-4d64-a074-45a7a4ca2a6a",
+   "id": "b049adcf-f9ec-4b04-ad94-2625cfa7edae",
    "metadata": {},
    "outputs": [],
    "source": []
