--- a/week2/week2.ipynb
+++ b/week2/week2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "552760ed-58ff-4100-a1d6-fe518b8c4371",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "c78796bd-31df-4142-b1a9-38a51b644daa",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "917c3f8c-f187-4d4e-bd0d-79f7728a3051",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "eae51648-7c10-438a-83a6-44fd17aa29e1",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "9704"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "07217115-3be8-436a-8a95-fb6b73758c87",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "b6d24df2-d037-40b3-b320-77e7300e2bf3",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "99e0ee4a-7fcd-4fe4-b6a9-f884413bffdb",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "352b8750-5213-43d3-9ab5-be8a54c9f8fa",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "41454b49-1b07-406b-a272-1e05ce6f0469",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "c7fd9c8d-36f6-46d1-bb6d-4eeb3f6a7ba9",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "<Axes: xlabel='fuel_efficiency_mpg', ylabel='Count'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "8d13a4dc-afc5-4dca-99ab-186223eab6e7",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "np.float64(149.0)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,12 +453,12 @@
    "id": "fae8bfd2-401c-4c56-8d9e-64596caf7fa2",
    "metadata": {},
    "source": [
-    "Shuffle and Split Dataset"
+    "# Shuffle and Split Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "id": "24407726-448d-4b3c-86ce-5d0f0a5523bd",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "9704"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "b20b4c1b-1978-4001-b146-b114eb475789",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "array([   0,    1,    2, ..., 9701, 9702, 9703], shape=(9704,))"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "e1b7e756-c7b9-424a-807b-b58d211144a6",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "id": "febc30e3-fee9-4cb2-b2d5-d0844b693e70",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        "array([ 483, 7506, 8795, ..., 5390,  860, 7270], shape=(9704,))"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "e67fae01-00f3-4c22-bb3f-141d41355c8e",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "6217            19.402209  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "6471478a-0ad9-4c4a-af78-3396c9ea47fa",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
        "(5824, 1940, 1940)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "id": "4e7a96df-b447-4fda-8de9-52f2aa451ef8",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "9704"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "c3de0d52-e1d0-491d-acc8-9a1d8c3bd1a7",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "id": "aade9c99-97f6-407b-bc74-bf4cd7b50e92",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
        "(5824, 1940, 1940)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,16 +717,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1ce51384-0753-4162-af54-23caa9d06e85",
+   "cell_type": "markdown",
+   "id": "de02744e-377d-497e-8df9-2772946305e1",
    "metadata": {},
    "source": [
-    "Train LInear Regression Model"
+    "# Train LInear Regression Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "id": "03588254-7f6d-4e25-b55e-64d8046c6ae7",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "       18.92574819, 17.96528447], shape=(5824,))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "id": "f196df6e-afb8-4317-9c88-bdf3153e0ddc",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "id": "8b329141-285a-475e-8a0e-d9559d313032",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "id": "74e10ca8-b798-4d53-8f1b-58776819625a",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "id": "4546aee5-c5a8-4713-bef4-8a60ee4dd070",
    "metadata": {},
    "outputs": [],
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "id": "82716be8-0262-4ab8-a216-28da479ff59c",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "id": "58574f0f-60fa-4023-aea7-553ebc7fb172",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "id": "e175082a-1b80-44d9-9bd5-2d9f64a474a0",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
        " array([ 9.93613218e-05,  3.54221891e-03, -5.01328015e-03,  3.42992870e-04]))"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "id": "8ae403e8-6d3c-4624-89f5-484a29c29f69",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "       18.78287539, 17.86564843], shape=(5824,))"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 31,
    "id": "22776179-94f1-4685-af7a-08c2a2b813f3",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 32,
    "id": "73896ea3-0faf-4821-8bab-2c0ec787a7bc",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 33,
    "id": "e12a38c8-36e0-4954-b8a1-1ea07693e8ef",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
        "       18.77812427, 17.84593445], shape=(5824,))"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 34,
    "id": "3b1d969a-716c-4ba5-93f9-f1f0f3b33e9a",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "id": "ae5ff014-027c-4a7c-a899-103666f4d5b9",
    "metadata": {},
    "outputs": [],
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "id": "16923bcb-b16d-438d-8d1e-df48e054a2c0",
    "metadata": {},
    "outputs": [],
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "id": "898580ab-dfdc-405f-972b-a6e5469eb55c",
    "metadata": {},
    "outputs": [],
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
    "id": "3fe1a077-28f7-47d2-aeb1-9b340cf23296",
    "metadata": {},
    "outputs": [],
@@ -989,46 +989,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 42,
    "id": "dfacf283-a12d-4f6e-9061-f0caff53022e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(0.6116860277058284)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6116860277058284\n"
+     ]
     }
    ],
    "source": [
     "score_with_zeros = rmse(y_val, y_val_pred)\n",
-    "score_with_zeros"
+    "print(score_with_zeros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 43,
    "id": "c9afb861-6dd4-4648-90ca-33e536f9eaa8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(0.4636236995020941)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4636236995020941\n"
+     ]
     }
    ],
    "source": [
     "score_with_mean = rmse(y_val, y_val_pred2)\n",
-    "score_with_mean"
+    "print(score_with_mean)"
    ]
   },
   {
@@ -1041,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 44,
    "id": "b876c445-67e3-400b-bc8a-db5b37db00e9",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 45,
    "id": "ea6e2524-f258-457c-aea9-215e523f31cd",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 46,
    "id": "49829b29-20bd-4848-8f8b-5e4006129485",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1188,7 @@
        "4            12.488369  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 47,
    "id": "c81b5352-d9ee-484b-916c-1718ca01867c",
    "metadata": {},
    "outputs": [],
@@ -1216,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 48,
    "id": "8b64a500-a6c8-4ed2-b33e-8c1439c488d4",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 49,
    "id": "17a42ecc-9c10-4ad7-8710-fc8eb0c8de9d",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 50,
    "id": "5f725a8a-782d-4279-b07a-afa7b70b83fd",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 51,
    "id": "2366b481-e0dd-493d-9e95-74c38c26d156",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1368,7 @@
        "4                  250       132.0     3114.371978        2001"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 52,
    "id": "3e99e050-6c61-447f-9af5-0f81c9e79e7e",
    "metadata": {},
    "outputs": [],
@@ -1419,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 54,
    "id": "61d0b03a-b0a1-4b65-ac19-d92ce501d8d9",
    "metadata": {},
    "outputs": [],
@@ -1429,8 +1423,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "5148e4e5-fa11-4b6d-a760-c3adb800e655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = prepare_X(df_test)\n",
+    "y_test_pred = w_0 + X_test.dot(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2fea902c-de2c-4d8a-85c8-9150b2911695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5156261299169602\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_rmse = rmse(y_test, y_test_pred)\n",
+    "print(test_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f5c9f617-f425-4051-8a16-a84a46a8cd2a",
+   "id": "018f24c5-22a8-4f14-af73-e133c21884c6",
    "metadata": {},
    "outputs": [],
    "source": []
